<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/spacing_16"
    android:background="#FAFAFA"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_32"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_24"
            android:layout_marginRight="@dimen/spacing_24"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/team_a_name"
                style="@style/team_name"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/team_a_name" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/score_team_a"
                android:textColor="#000000"
                android:textSize="@dimen/score_size" />

            <Button
                style="@style/button_for_scores"
                android:background="#4CAF50"
                android:onClick="teamA10Pts"
                android:text="@string/question_easy" />

            <Button
                style="@style/button_for_scores"
                android:background="#FFC107"
                android:onClick="teamA30Pts"
                android:text="@string/question_moderate" />

            <Button
                style="@style/button_for_scores"
                android:background="#F44336"
                android:onClick="teamA50Pts"
                android:text="@string/question_hard" />

            <Button
                style="@style/button_for_scores"
                android:background="#03A9F4"
                android:onClick="teamAMiss"
                android:text="@string/question_miss" />

        </LinearLayout>

        <TextView
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_16"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_24"
            android:layout_marginRight="@dimen/spacing_24"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/team_b_name"
                style="@style/team_name"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/team_b_name" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/score_team_b"
                android:textColor="#000000"
                android:textSize="@dimen/score_size" />

            <Button
                style="@style/button_for_scores"
                android:background="#4CAF50"
                android:onClick="teamB10Pts"
                android:text="@string/question_easy" />

            <Button
                style="@style/button_for_scores"
                android:background="#FFC107"
                android:onClick="teamB30Pts"
                android:text="@string/question_moderate" />

            <Button
                style="@style/button_for_scores"
                android:background="#F44336"
                android:onClick="teamB50Pts"
                android:text="@string/question_hard" />

            <Button
                style="@style/button_for_scores"
                android:background="#03A9F4"
                android:onClick="teamBMiss"
                android:text="@string/question_miss" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_32"
        android:layout_marginRight="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_32">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F44336"
            android:onClick="resetTeamScores"
            android:padding="@dimen/spacing_8"
            android:text="@string/reset_scores"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#2979ff"
            android:onClick="submitScores"
            android:padding="@dimen/spacing_8"
            android:text="@string/submit_score"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>
